--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ body {
   margin: 0;
   background-color: #1c1c1c;
   font-family: "Poppins", sans-serif;
+  color: white;
+  font-weight: 400;
 }
 
 a {
@@ -15,4 +17,46 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  margin: auto;
+  width: 65vw;
+  position: relative;
+}
+
+.left,
+.right {
+  width: 50%;
+  max-height: 500px;
+}
+
+.right {
+  display: flex;
+  justify-content: center;
+}
+
+#Mislav,
+#Parg {
+  color: #ff7736;
+}
+
+h1,
+h2 {
+  font-weight: 400;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+#follow {
+  display: flex;
+  align-items: center;
+  margin-top: 4rem;
 }
