--- a/components/email_button.module.css
+++ b/components/email_button.module.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: #ff7736;
+  background-color: var(--main-color);
   width: 125px;
   height: 55px;
   padding: 10px 15px;
