add basic layout and styling for projects page, and add some projects

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,8 +1,11 @@
 .container {
-  display: flex;
   margin: auto;
   width: 65vw;
   position: relative;
+}
+
+.flex {
+  display: flex;
 }
 
 .h1-title {
