--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -4,10 +4,6 @@
   position: relative;
 }
 
-.flex {
-  display: flex;
-}
-
 .h1-title {
   font-weight: 400;
   font-size: 2.5rem;
@@ -17,4 +13,12 @@
   font-weight: 400;
   font-size: 2rem;
   display: inline;
+}
+
+.margin-top {
+  margin-top: 4rem;
+}
+
+.center {
+  text-align: center;
 }
