add descriptions to skills, projects and hobbies and adjust css to them

--- a/components/Hobbies/hobbies.module.css
+++ b/components/Hobbies/hobbies.module.css
@@ -1,11 +1,10 @@
 .card {
   margin-top: 2rem;
-  justify-content: center;
+  width: calc(50% - 2rem);
 }
 
-.projectImage {
+.hobbiesImage {
   border-radius: 0.5rem 0.5rem 0 0;
-  overflow: hidden;
 }
 
 .ul {
