--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -23,3 +23,10 @@
 .center {
   text-align: center;
 }
+
+.flex-start {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 1rem;
+}
