work on media queries, index page done

--- a/components/Home/home.module.css
+++ b/components/Home/home.module.css
@@ -1,3 +1,9 @@
 .buttons {
   justify-content: flex-start;
 }
+
+@media screen and (max-width: 767px) {
+  .buttons {
+    justify-content: center;
+  }
+}
