--- a/components/Home/typewriter.module.css
+++ b/components/Home/typewriter.module.css
@@ -3,3 +3,9 @@
   align-items: center;
   gap: 1rem;
 }
+
+@media screen and (max-width: 767px) {
+  .containerDiv {
+    justify-content: center;
+  }
+}
