--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -30,3 +30,9 @@
   justify-content: flex-start;
   gap: 1rem;
 }
+
+@media screen and (max-width: 767px) {
+  .container {
+    width: 100vw;
+  }
+}
