--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -31,6 +31,12 @@
   gap: 1rem;
 }
 
+@media screen and (max-width: 1023px) {
+  .container {
+    width: 85vw;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .container {
     width: 100vw;
