--- a/components/download_button.module.css
+++ b/components/download_button.module.css
@@ -22,3 +22,10 @@
   margin-left: 5px;
   font-size: 1.2rem;
 }
+
+@media screen and (max-width: 767px) {
+  .button {
+    width: 100px;
+    margin: 20px 0 0 0;
+  }
+}
