--- a/components/Home/home.module.css
+++ b/components/Home/home.module.css
@@ -13,6 +13,8 @@
 }
 
 .mediaFlex {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 0;
 }
 
@@ -31,8 +33,13 @@
 
 @media screen and (max-width: 767px) {
   .mediaFlex {
-    min-width: calc(33% - 2rem);
-    margin-bottom: 0;
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 615px) {
+  .mediaFlex {
+    display: block;
   }
 }
 
