--- a/components/Projects/projects.module.css
+++ b/components/Projects/projects.module.css
@@ -34,18 +34,18 @@
     width: 100%;
     text-align: center;
   }
-}
 
-@media screen and (max-width: 767px) {
   .card {
     max-width: 80%;
     text-align: center;
     margin-bottom: 2rem;
   }
-}
 
-@media screen and (max-width: 767px) {
   .techno {
     justify-content: center;
+  }
+
+  .main {
+    text-align: center;
   }
 }
