--- a/components/download_button.module.css
+++ b/components/download_button.module.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: var(--background);
+  background-color: #d27b4b;
   width: 125px;
   height: 55px;
   padding: 10px 15px;
@@ -7,6 +7,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 8px 0 #ff5403;
   color: white;
+  font-weight: 700;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,12 +21,11 @@
 
 .resume {
   margin-left: 5px;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 @media screen and (max-width: 767px) {
   .button {
-    width: 100px;
     margin: 20px 0 0 0;
   }
 }
