--- a/components/download_button.module.css
+++ b/components/download_button.module.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: #d27b4b;
+  background-color: var(--background);
   width: 125px;
   height: 55px;
   padding: 10px 15px;
