--- a/components/Navigation/navigation.module.css
+++ b/components/Navigation/navigation.module.css
@@ -8,7 +8,7 @@
   color: white;
   font-size: 1.1rem;
   font-weight: 700;
-  padding-right: 1.6rem;
+  padding-right: 2rem;
 }
 
 .links:hover {
@@ -44,6 +44,12 @@
   overflow: hidden;
   height: 40px;
   width: 40px;
+}
+
+@media screen and (min-width: 2000px) {
+  .menu {
+    padding: 1.4rem 12rem;
+  }
 }
 
 @media screen and (max-width: 767px) {
