--- a/components/Projects/projects.module.css
+++ b/components/Projects/projects.module.css
@@ -1,5 +1,5 @@
 .card {
-  max-width: calc(33% - 2rem);
+  width: calc(33% - 2rem);
 }
 
 .projectImage {
@@ -47,5 +47,11 @@
 
   .main {
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .card {
+    width: 100%;
   }
 }
