--- a/components/Home/home.module.css
+++ b/components/Home/home.module.css
@@ -33,33 +33,27 @@
   .buttons {
     justify-content: center;
   }
-
   .git {
     width: 90%;
     margin: auto;
   }
-
   .mediaFlex {
     width: 25%;
   }
-
   .follow {
     justify-content: center;
   }
-
   .left {
     width: 100%;
     text-align: center;
   }
-
   .right {
     display: none;
   }
 }
-
 @media screen and (max-width: 615px) {
   .mediaFlex {
     display: block;
     text-align: center;
   }
-}
+}/*# sourceMappingURL=home.module.css.map */
