--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,200&display=swap");
-
 html,
 body {
   padding: 0;
@@ -47,4 +46,4 @@ a {
   #follow {
     justify-content: center;
   }
-}
+}/*# sourceMappingURL=globals.css.map */
