put fixed navbar on desktop and mobile

--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -1,6 +1,7 @@
 .container {
   margin-left: auto;
   margin-right: auto;
+  margin-top: 90px;
   width: 65vw;
   position: relative;
 }
@@ -55,4 +56,4 @@
   .container {
     width: 100vw;
   }
-}/*# sourceMappingURL=utilities.css.map */
+} /*# sourceMappingURL=utilities.css.map */
