--- a/components/Navigation/navigation.module.css
+++ b/components/Navigation/navigation.module.css
@@ -32,18 +32,24 @@
 .hamburger {
   position: absolute;
   right: 5%;
-  top: 3%;
   z-index: 1;
 }
 
 .minime {
   position: absolute;
   left: 5%;
-  top: 3%;
   border-radius: 50%;
   overflow: hidden;
   height: 40px;
   width: 40px;
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  background-color: rgba(28, 28, 28, 0.9);
+  width: 100%;
 }
 
 @media screen and (min-width: 2000px) {
@@ -55,11 +61,18 @@
   .nav {
     display: none;
   }
-  .navBar {
+  /* .navBar {
     height: calc(3vh + 50px);
-  }
+  } */
   .navMobile {
     display: flex;
+    position: fixed;
+    top: 0;
+    z-index: 100;
+    background-color: rgba(28, 28, 28, 0.9);
+    width: 100%;
+    height: 90px;
+    align-items: center;
   }
   .menu {
     display: flex;
@@ -76,4 +89,4 @@
   .links {
     margin: 2rem 0;
   }
-}/*# sourceMappingURL=navigation.module.css.map */
+} /*# sourceMappingURL=navigation.module.css.map */
