--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,33 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,200&display=swap');
 html,
 body {
-  padding: 0;
-  margin: 0;
-  background-color: var(--background);
-  font-family: "Poppins", sans-serif;
-  color: white;
-  font-weight: 400;
-  height: 100%;
+  font-family: 'Poppins', sans-serif;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-#Mislav,
-#Parg {
-  color: var(--main-color);
 }
 
 .flex {
@@ -37,13 +17,3 @@ a {
   margin-bottom: 4rem;
   gap: 2rem;
 }
-
-.main-color {
-  color: var(--main-color);
-}
-
-@media screen and (max-width: 767px) {
-  #follow {
-    justify-content: center;
-  }
-}/*# sourceMappingURL=globals.css.map */
