--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,12 @@ html,
 body {
   font-family: 'Poppins', sans-serif;
 }
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
